cmss/main/default/objects/PortfolioManagementImpulse__c/PortfolioManagementImpulse__c.object-meta.xml
<CustomObject>
    <label>Portfolio Management Impulse</label>
    <nameField>
        <label>PortfolioManagementImpulse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Management Impulses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>