cmss/main/default/objects/PortfolioManagementImpulse__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <label>Asset ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>