cmss/main/default/objects/PortfolioManagementImpulse__c/fields/ClientZoneName__c.field-meta.xml
<CustomField>
    <fullName>ClientZoneName__c</fullName>
    <label>Client Zone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>