cmss/main/default/objects/PortfolioManagementImpulse__c/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>