cmss/main/default/objects/PortfolioManagementImpulse__c/fields/LoanCaseId__c.field-meta.xml
<CustomField>
    <fullName>LoanCaseId__c</fullName>
    <label>Loan Case Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>