cmss/main/default/objects/PortfolioManagementImpulse__c/fields/ManagerTypeACPU__c.field-meta.xml
<CustomField>
    <fullName>ManagerTypeACPU__c</fullName>
    <label>Manager Type A</label>
    <length>15</length>
    <type>Text</type>
</CustomField>