cmss/main/default/objects/PortfolioManagementImpulse__c/fields/ManagerTypeCCPU__c.field-meta.xml
<CustomField>
    <fullName>ManagerTypeCCPU__c</fullName>
    <label>Manager Type C</label>
    <length>15</length>
    <type>Text</type>
</CustomField>