cmss/main/default/objects/PortfolioManagementImpulse__c/fields/NewPortfolioManACPU__c.field-meta.xml
<CustomField>
    <fullName>NewPortfolioManACPU__c</fullName>
    <label>Original Portfolio Manager A CPU</label>
    <length>15</length>
    <type>Text</type>
</CustomField>