cmss/main/default/objects/PortfolioManagementImpulse__c/fields/NewPortfolioManCCPU__c.field-meta.xml
<CustomField>
    <fullName>NewPortfolioManCCPU__c</fullName>
    <label>Original Portfolio Manager C CPU</label>
    <length>15</length>
    <type>Text</type>
</CustomField>