cmss/main/default/objects/PortfolioManagementImpulse__c/fields/OriginalPortfolioManA__c.field-meta.xml
<CustomField>
    <fullName>OriginalPortfolioManA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Portfolio Manager A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagementImpulsesoriginA</relationshipName>
    <type>Lookup</type>
</CustomField>