cmss/main/default/objects/PortfolioManagementImpulse__c/fields/OriginalPortfolioManC__c.field-meta.xml
<CustomField>
    <fullName>OriginalPortfolioManC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Portfolio Manager C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagementImpulsesoriginC</relationshipName>
    <type>Lookup</type>
</CustomField>