cmss/main/default/objects/PortfolioManagementImpulse__c/fields/PortfolioManChangeResult__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManChangeResult__c</fullName>
    <label>Portfolio Management Change Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>