cmss/main/default/objects/PortfolioManagementImpulse__c/fields/ProcessingState__c.field-meta.xml
<CustomField>
    <fullName>ProcessingState__c</fullName>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>