cmss/main/default/objects/PortfolioManagementImpulse__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>