cmss/main/default/objects/PortfolioManagementImpulse__c/fields/RequestedPortfolioManA__c.field-meta.xml
<CustomField>
    <fullName>RequestedPortfolioManA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Portfolio Manager A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagementImpulsesA</relationshipName>
    <type>Lookup</type>
</CustomField>