cmss/main/default/objects/PortfolioManagementImpulse__c/fields/RequestedPortfolioManC__c.field-meta.xml
<CustomField>
    <fullName>RequestedPortfolioManC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Portfolio Manager C</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagementImpulsesC</relationshipName>
    <type>Lookup</type>
</CustomField>